Split opencv into extras

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,15 @@ license = MIT
 packages = find:
 install_requires =
     pyapriltags
-    opencv-python
     numpy
     pyquaternion
 
 [options.extras_require]
 j5 =
     j5
+cli =
+    opencv-python
+opencv =
+    opencv-python-headless
 
 python_requires >= 3.8
