--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ license = MIT
 [options]
 packages = find:
 install_requires =
-    pyapriltags
+    pyapriltags >=3.3.0.post1, <4
     numpy
     pyquaternion
 
