--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ license = MIT
 
 [options]
 packages = find:
+include_package_data = True
 install_requires =
     pyapriltags >=3.3.0.post1, <4
     numpy
