Improve setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,9 @@
 [metadata]
 name = april_vision
+description = An AprilTags wrapper with camera discovery and axis conversion.
 license = MIT
+author = "Will Barber, Joshua Perriman"
+url = https://github.com/WillB97/april_vision
 
 [options]
 packages = find:
