--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ author = "Will Barber, Joshua Perriman"
 url = https://github.com/WillB97/april_vision
 
 [options]
+python_requires = >=3.8
 packages = find:
 include_package_data = True
 install_requires =
@@ -25,5 +26,3 @@ cli =
     opencv-python >=4, <5
 opencv =
     opencv-python-headless >=4, <5
-
-python_requires >= 3.8
