--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,8 @@ install_requires =
     numpy >= 1.21, <2
     pyquaternion >=0.9.9, <1
     Pillow
+    libusb-package >=1.0.26.1, <2
+    pyusb >=1.2.1, <2
 
 [options.extras_require]
 dev =
