Add package description

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,8 @@
 [metadata]
 name = april_vision
 description = An AprilTags wrapper with camera discovery and axis conversion.
+long_description = file: README.md
+long_description_content_type = text/markdown
 license = MIT
 author = "Will Barber, Joshua Perriman"
 url = https://github.com/WillB97/april_vision
