mypy: Correctly define stubs directory
Stubs are not the same as a regular module, we need to tell mypy that otherwise PEP 561 doesn't work correctly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,6 @@
+[tool.mypy]
+mypy_path = "stubs"
+
 [build-system]
 requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
 build-backend = "setuptools.build_meta"
