--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install .[dev,j5]
+        python -m pip install -r requirements.txt
+        python -m pip install . --no-deps
     - name: Lint
       run: |
         make lint
