Add option to merge PDFs into one PDF

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,6 @@ install_requires =
     pyapriltags >=3.3.0.post1, <4
     numpy >= 1.21, <2
     pyquaternion >=0.9.9, <1
-    Pillow
     libusb-package >=1.0.26.1, <2; platform_system=='Windows'
     pyusb >=1.2.1, <2; platform_system=='Windows'
 
@@ -30,6 +29,8 @@ j5 =
     j5 >=1, <2
 cli =
     opencv-python >=4, <5
+    Pillow >=9.4.0, <10
+    pypdf >=3.2.0, <4
 opencv =
     opencv-python-headless >=4, <5
 
