--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,6 +15,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[dev,j5]
+        python -m pip install pypdf
     - name: Lint
       run: |
         make lint
