--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ python_requires = >=3.8
 packages = find:
 include_package_data = True
 install_requires =
-    pyapriltags >=3.3.0.post1, <4
+    pyapriltags >=3.3.0.2, <4
     numpy >= 1.21, <2
     pyquaternion >=0.9.9, <1
     libusb-package >=1.0.26.1, <2; platform_system=='Windows'
