Proposed new windows cam discovery using winrt

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,7 @@ install_requires =
     pyapriltags >=3.3.0.2, <4
     numpy >= 1.21, <2
     pyquaternion >=0.9.9, <1
-    libusb-package >=1.0.26.1, <2; platform_system=='Windows'
-    pyusb >=1.2.1, <2; platform_system=='Windows'
+    winrt >=1.0.21033.1, <2; platform_system=='Windows'
 
 [options.extras_require]
 dev =
