--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,24 @@
+[tool.mypy]
+mypy_path = "stubs"
+
+warn_unused_ignores = true
+warn_return_any = true
+show_error_codes = true
+
+strict_optional = true
+implicit_optional = true
+
+disallow_any_unimported = true
+disallow_subclassing_any = true
+#disallow_any_generics = true
+
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+
+check_untyped_defs = true
+
 [build-system]
 requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
 build-backend = "setuptools.build_meta"
