--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ cli =
     opencv-python >=4, <5
     Pillow >=9.4.0, <10
     pypdf >=3.2.0, <4
+    tabulate >=0.9.0, <1
 opencv =
     opencv-python-headless >=4, <5
 
