--- a/setup.cfg
+++ b/setup.cfg
@@ -24,12 +24,14 @@ dev =
     mypy
     build
     types-Pillow
+    types-tabulate
 j5 =
     j5 >=1, <2
 cli =
     opencv-python >=4, <5
     Pillow >=9.4.0, <10
     pypdf >=3.2.0, <4
+    tabulate >=0.9.0, <1
 opencv =
     opencv-python-headless >=4, <5
 
