winrt only supports upto python 3.9 - winsdk is a fork with support upto 3.11

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,9 @@ install_requires =
     pyapriltags >=3.3.0.2, <4
     numpy >= 1.21, <2
     pyquaternion >=0.9.9, <1
-    winrt >=1.0.21033.1, <2; platform_system=='Windows'
+    # winrt only supports upto python 3.10
+    # winrt >=1.0.21033.1, <2; platform_system=='Windows'
+    winsdk >=1.0.0b7, <2; platform_system=='Windows'
 
 [options.extras_require]
 dev =
