--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install .[dev,j5]
-        python -m pip install pypdf
+        python -m pip install .[dev,cli]
+        python -m pip install opencv-contrib-python-headless>=4.8
     - name: Lint
       run: |
         make lint
