Add a set of test images to run through detection

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -25,6 +25,9 @@ jobs:
     - name: Typecheck
       run: |
         make type
+    - name: Test
+      run: |
+        make test
     - name: Build package
       run: |
         make build
