--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,8 @@ dev =
     build
     types-Pillow
     types-tabulate
+    pytest
+    pytest-cov
 cli =
     Pillow >=9.4.0, <10
     pypdf >=3.2.0, <4
