--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -15,7 +15,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[dev,cli]
-        python -m pip install opencv-contrib-python-headless>=4.8
+        python -m pip install opencv-python-headless>=4.8
     - name: Lint
       run: |
         make lint
