--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ dev =
 cli =
     Pillow >=9.4.0, <10
     tabulate >=0.9.0, <1
+    font-roboto >=0.0.1
 opencv =
     opencv-python-headless >=4, <5
 
