--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install .[dev,cli]
-        python -m pip install opencv-python-headless>=4.8
+        python -m pip install 'opencv-python-headless>=4.8,<4.9'
     - name: Lint
       run: |
         make lint
