--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,3 @@
-[tool.mypy]
-mypy_path = "stubs"
-
-warn_unused_ignores = true
-warn_return_any = true
-show_error_codes = true
-
-strict_optional = true
-implicit_optional = true
-
-disallow_any_unimported = true
-disallow_subclassing_any = true
-#disallow_any_generics = true
-
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_untyped_decorators = true
-
-check_untyped_defs = true
-
 [project]
 name = "april_vision"
 description = "An AprilTags wrapper with camera discovery and axis conversion."
@@ -49,8 +28,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
-    "flake8",
-    "isort",
+    "ruff >=0.0.290,<1",
     "mypy",
     "build",
     "types-Pillow",
@@ -80,3 +58,43 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
 version_file = "april_vision/_version.py"
+
+# ### Linting Rules ###
+[tool.ruff]
+ignore = [
+    "D105",
+    "D107",
+    "D401",
+    "D203",
+    "D212",
+]
+line-length = 95
+select = [
+    "D",
+    "E",
+    "F",
+    "I",
+    "W",
+]
+
+# ### Formatting Rules ###
+[tool.mypy]
+mypy_path = "stubs"
+
+warn_unused_ignores = true
+warn_return_any = true
+show_error_codes = true
+
+strict_optional = true
+implicit_optional = true
+
+disallow_any_unimported = true
+disallow_subclassing_any = true
+#disallow_any_generics = true
+
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_untyped_decorators = true
+
+check_untyped_defs = true
