--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,19 +62,20 @@ version_file = "april_vision/_version.py"
 # ### Linting Rules ###
 [tool.ruff]
 ignore = [
-    "D105",
-    "D107",
-    "D401",
-    "D203",
-    "D212",
+    "D104",  # Ignoe missing docstring in public package
+    "D105",  # Ignore missing docstring in magic method
+    "D107",  # Ignore missing docstring in __init__
+    "D401",  # Ignore first line of docstring should be in imperative mood
+    "D203",  # Ignore 1 blank line required before class docstring
+    "D212",  # Ignore Multi-line docstring summary should start at the first line
 ]
 line-length = 95
 select = [
-    "D",
-    "E",
-    "F",
-    "I",
-    "W",
+    "D",  # pydocstyle
+    "E",  # pycodestyle error
+    "F",  # pyflakes
+    "I",  # isort
+    "W",  # pycodestyle warning
 ]
 
 # ### Formatting Rules ###
