--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = [
+    "poethepoet >=0.0.1,<1",
     "ruff >=0.0.290,<1",
     "mypy",
     "build",
@@ -102,3 +103,46 @@ disallow_incomplete_defs = true
 disallow_untyped_decorators = true
 
 check_untyped_defs = true
+
+# ### Tasks ###
+[tool.poe.env]
+PYMODULE = "april_vision"
+
+[tool.poe.tasks]
+_upload = "python -m twine upload dist/*"
+
+[tool.poe.tasks.lint]
+help = "Run ruff against the project to check for linting errors."
+cmd = "ruff check $PYMODULE"
+
+[tool.poe.tasks.type]
+help = "Run mypy against the project to check for type errors."
+cmd = "python -m mypy $PYMODULE"
+
+[tool.poe.tasks.test]
+help = "Run pytest against the project to check for test errors."
+cmd = "python -m pytest --cov=$PYMODULE --cov-report=term --cov-report=xml tests"
+
+[tool.poe.tasks.check]
+help = "Check the project for linting, type and test errors."
+sequence = ["lint", "type", "test"]
+
+[tool.poe.tasks.fix]
+help = "Use ruff to fix any auto-fixable linting errors."
+cmd = "ruff check --fix-only $PYMODULE"
+
+[tool.poe.tasks.build]
+help = "Build the wheel and source distributions."
+cmd = "python -m build"
+
+[tool.poe.tasks.upload]
+help = "Build and upload the wheel and source distributions to PyPI."
+sequence = ["build", "_upload"]
+
+[tool.poe.tasks.clean]
+help = "Clean the project of any build artifacts."
+sequence = [
+    "shutil:rmtree('dist', ignore_errors=1)",
+    "shutil:rmtree('build', ignore_errors=1)",
+]
+default_item_type = "script"
