--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 dev = [
     "poethepoet >=0.0.1,<1",
     "ruff >=0.3.0,<0.4",
-    "mypy",
+    "mypy==1.9.0",
     "build",
     "types-Pillow",
     "types-tabulate",
