--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ version_file = "april_vision/_version.py"
 # ### Linting Rules ###
 [tool.ruff]
 line-length = 95
-select = [
+lint.select = [
     "D",  # pydocstyle
     "E",  # pycodestyle error
     "F",  # pyflakes
@@ -79,7 +79,7 @@ select = [
     # "SLF001",  # warn about accessing private members, these can be noqa'd when necessary
 ]
 preview = true  # Enable preview to get the rest of pycodestyle errors
-ignore = [
+lint.ignore = [
     "D104",  # Ignoe missing docstring in public package
     "D105",  # Ignore missing docstring in magic method
     "D107",  # Ignore missing docstring in __init__
