--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev = [
     "build",
     "types-Pillow",
     "types-tabulate",
+    "types-reportlab==4.2.0.20240525",
     "pytest",
     "pytest-cov",
 ]
@@ -39,6 +40,7 @@ cli = [
     "Pillow >=9.4.0,<11",
     "tabulate >=0.9.0,<1",
     "font-roboto >=0.0.1",
+    "reportlab >=4,<5",
 ]
 opencv = ["opencv-python-headless >=4.10,<5"]
 
