--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -10,16 +10,16 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        py_version: ["3.9", "3.10", "3.11", "3.12"]
+        py_version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         include:
           - os: windows-latest
             py_version: "3.9"
           - os: windows-latest
-            py_version: "3.12"
+            py_version: "3.13"
           - os: macos-latest
             py_version: "3.9"
           - os: macos-latest
-            py_version: "3.12"
+            py_version: "3.13"
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
