--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -32,8 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install .[dev,cli]
-        python -m pip install 'opencv-python-headless>=4.8,<4.9'
+        python -m pip install .[dev,cli,opencv]
     - name: Lint
       run: |
         poe lint
