--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "numpy >= 2,<3",
     "pyquaternion >=0.9.9,<1",
     "winrt-Windows.Devices.Enumeration >=2.3.0,<3; platform_system=='Windows'",
+    "winrt-Windows.Foundation >=2.3.0,<3; platform_system=='Windows'",
+    "winrt-Windows.Foundation.Collections >=2.3.0,<3; platform_system=='Windows'",
 ]
 
 [project.optional-dependencies]
