--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ cli = [
     "tabulate >=0.9.0,<1",
     "font-roboto >=0.0.1",
     "reportlab >=4,<5",
+    "progress ==1.6",
 ]
 opencv = ["opencv-python-headless >=4.10,<5"]
 
